feat(cors): externalize allowed origins via CRM2_CORS_ALLOWED_ORIGINS
CORS allowed origins were hardcoded to http://localhost:5173 in both the WebMvcConfigurer and the Spring Security CorsConfigurationSource, blocking the deployed frontend. Now env-driven (comma-separated) with the localhost default for local dev.