@@ -1,7 +1,8 @@
 package com.ar.crm2.security;
 
-import java.util.List;
+import java.util.Arrays;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -12,8 +13,8 @@ import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 /**
  * CORS configuration for CRM2 REST API.
- * Allows frontend at http://localhost:5173 to call the backend.
- * Excludes /api/** so Swagger UI remains unaffected.
+ * Allowed origins are env-driven (CRM2_CORS_ALLOWED_ORIGINS), defaulting to the
+ * local Vite dev server. Applies to /api/** so Swagger UI remains unaffected.
  *
  * <p>Exposes both {@link WebMvcConfigurer} (for Spring MVC CORS) and
  * {@link CorsConfigurationSource} (for Spring Security CORS integration).
@@ -24,13 +25,23 @@ import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 @Configuration
 public class CorsConfig {
 
+    /**
+     * Allowed CORS origins for the frontend. Comma-separated, env-driven via
+     * {@code CRM2_CORS_ALLOWED_ORIGINS}; defaults to the local Vite dev server.
+     */
+    private final String[] allowedOrigins;
+
+    public CorsConfig(@Value("${crm2.cors.allowed-origins:http://localhost:5173}") String[] allowedOrigins) {
+        this.allowedOrigins = allowedOrigins;
+    }
+
     @Bean
     public WebMvcConfigurer corsConfigurer() {
         return new WebMvcConfigurer() {
             @Override
             public void addCorsMappings(CorsRegistry registry) {
                 registry.addMapping("/api/**")
-                        .allowedOrigins("http://localhost:5173")
+                        .allowedOrigins(allowedOrigins)
                         .allowedMethods("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS")
                         .allowedHeaders("*")
                         .allowCredentials(false);
@@ -46,7 +57,7 @@ public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:5173"));
+        config.setAllowedOrigins(Arrays.asList(allowedOrigins));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(false);
